Fixes to urlbarView-row - Fixed contents changing position on hover; - Fixed urlbarView-title being misaligned sometimes.

--- a/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbarView.scss
+++ b/Profile Folder/chrome/styles/partials/chrome/chrome-1/_urlbarView.scss
@@ -177,7 +177,12 @@
 	font-size: unset !important;
 	color: rgb(11, 133, 14) !important;
 	flex-grow: 0 !important;
+	flex-shrink: 0 !important;
 	order: 1 !important;
+}
+
+.urlbarView-button-menu {
+	display: none !important;
 }
 
 .search-one-offs {
